--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,65 @@
-# Object file
-*.o
+# files ext
+*.sql
+*.tgz
+*.tar.gz
+*.tar
+*.rar
+*.zip
+*.mp3
+*.mp4
+*.webm
+*.mov
+*.MOV
+*.wav
+*.flv
+*.db
+*.psd
+*.pdf
+*.doc
+*.docx
+*.txt
+*.text
+*.log
+*.config
+*.xml
+*.tbk
 
-# Ada Library Information
-*.ali
+# dirs & files
+/bower_components/
+/node_modules/
+/nbproject/
+/cache/
+/phpMyAdmin-*
+/timthumb_cache/
+/webstat/
+/.idea/
+/.csscomb.json
+/.htaccess
+/sitemap*.xml
+/sftp-config.json
+/robots.txt
+/bower.json
+/.bowerrc
+
+test*.php
+.httpauth-disable
+.htsecure
+
+# ai-bolit
+ai-bolit.php
+.aurlignore
+.aignore
+.adirignore
+AI-BOLIT-*
+
+# core
+bitrix/*
+!bitrix/license_key.php
+!bitrix/templates/
+!bitrix/components/
+bitrix/components/bitrix/
+!bitrix/php_interface/
+bitrix/php_interface/dbconn.php
+upload/
+bitrix/templates/landing24/
+bitrix/templates/learning/
